[gd_scene load_steps=6 format=1]

[ext_resource path="res://objects/player.gd" type="Script" id=1]
[ext_resource path="res://images/g7042.png" type="Texture" id=2]
[ext_resource path="res://images/g6846.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30, 12 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 41.5035

[node name="Player" type="KinematicBody2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]

transform/pos = Vector2( -25.0699, 0.935471 )
config/amount = 16
config/lifetime = 0.5
config/process_mode = 1
params/direction = 275.0
params/spread = 10.0
params/linear_velocity = 50.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.05
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/hue_variation = 0.1
color/color = Color( 0.746094, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
region_rect = Rect2( 672, 0, 121, 62 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Swirl" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="Swirl1" type="Sprite" parent="."]

transform/rot = 90.0
texture = ExtResource( 3 )

[node name="Swirl2" type="Sprite" parent="."]

transform/rot = -180.0
texture = ExtResource( 3 )

[node name="Swirl3" type="Sprite" parent="."]

transform/rot = -90.0
texture = ExtResource( 3 )

[node name="Shield" type="KinematicBody2D" parent="."]

visibility/visible = false
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0


